--- a/server/package.json
+++ b/server/package.json
@@ -16,7 +16,9 @@
     "express": "^4.17.1",
     "google-auth-library": "^6.0.6",
     "jsonwebtoken": "^8.5.1",
+    "live-server": "^1.2.1",
     "newsapi": "^2.4.1",
+    "nodemon": "^2.0.4",
     "pg": "^8.3.0",
     "sequelize": "^6.3.4"
   },
